<resources>
    <string name="app_name">Quiz App</string>
    <string name="text_box_label"> 0 </string>
    <string name="click_button">Submit</string>
    <string name="name_hint">What is your name?</string>
    <string name="color_hint">What is your favorite color?</string>
    <string name="color_button">Change Background Color</string>
    <string name='increment'>Increment</string>

</resources>
